--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "fullcanvas.js",
     "scripts": {
         "build": "webpack --watch",
-        "run": "npm run build & serve -o static"
+        "run": "npm run build & serve static & open http://localhost:5000?wsda=true"
     },
     "author": "",
     "license": "ISC",
@@ -21,7 +21,9 @@
     "dependencies": {
         "geodist": "^0.2.1",
         "pick-random": "^2.0.0",
+        "query-string": "^5.0.0",
         "rxjs": "^5.4.2",
+        "screenfull": "^3.3.1",
         "tinygradient": "^0.3.1"
     }
 }
