--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "jshint": "^2.9.5",
         "raw-loader": "^0.5.1",
         "serve": "^6.0.2",
-        "webpack": "^3.1.0"
+        "webpack": "^3.1.0",
+        "webpack-dev-server": "^2.7.1"
     },
     "dependencies": {
         "geodist": "^0.2.1",
