--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "esversion": 6
     },
     "devDependencies": {
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
+        "babel-preset-es2015": "^6.24.1",
         "jshint": "^2.9.5",
         "raw-loader": "^0.5.1",
         "serve": "^6.0.2",
@@ -20,11 +23,13 @@
         "webpack-dev-server": "^2.7.1"
     },
     "dependencies": {
+        "babel-polyfill": "^6.26.0",
         "geodist": "^0.2.1",
         "pick-random": "^2.0.0",
         "query-string": "^5.0.0",
         "rxjs": "^5.4.2",
         "screenfull": "^3.3.1",
+        "tinycolor": "0.0.1",
         "tinygradient": "^0.3.1"
     }
 }
