--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "babel-polyfill": "^6.26.0",
+        "dateformat": "^3.0.2",
         "geodist": "^0.2.1",
         "pick-random": "^2.0.0",
         "query-string": "^5.0.0",
